2022.12 Refactoring